[package]
name = "gsu_sentinel_core_v2"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["ws", "multipart"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
zeromq = "0.4"
rumqttc = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
ndarray = "0.15"
byteorder = "1.4"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
# Nuevas dependencias
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }
image = "0.24" # Para generar el PNG de la alerta
dotenv = "0.15"
