[package]
name = "gsu_sentinel_core_v2"
version = "0.1.0"
edition = "2024"

[dependencies]


# Web & Async
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Data & Math
ndarray = "0.15"
ndarray-npy = "0.8"
byteorder = "1.5" # Crucial para leer datos de C++
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"

# Communication
zeromq = "0.4.1" 
rumqttc = "0.24"
parking_lot = "0.12" # Better Mutex
uuid = { version = "1.0", features = ["v4"] }
